# TG

./: README.en.md  README.md  git_pull.bat
Mysql/: nexus.sql
Nexsu样式库/: README.md
NexusDemo/code-hand/: Leetcode-01-simply-两数之和.html  leetcode-03-simply-简易罗马数字转整数.html  leetcode-09-simply-简易回文数.html  leetcode-1047-simply-删除字符串中的所有相邻重复项.html  leetcode-13-simply-罗马数字转整数.html  leetcode-14-simply-最长公共前缀.html  leetcode-20-simply-有效括号.html  leetcode-71-moderate-简化路径.html  leetcode-933-simply-最近的请求次数.html  moderate-01-冒泡排序.html  moderate-02-快速排序.html  moderate-04-归并排序.html  (+4 more)
NexusNpmS/: README.en.md  README.md  package.json  vite.config.js
NexusRustApi/: .env  Cargo.toml  README.en.md  README.md
NexusRustApi/src/: main.rs
NexusRustApi/src/common/: apimethods.rs  mod.rs  resmethods.rs  response.rs
NexusRustApi/src/database/: mod.rs  pool.rs
NexusRustApi/src/modules/: demo.rs  mod.rs
NexusRustApi/src/modules/article/: routes.rs
NexusRustApi/src/modules/auth/: handlers.rs  routes.rs
NexusRustApi/src/modules/dept/: handlers.rs  routes.rs
NexusRustApi/src/modules/dict/: handlers.rs  routes.rs
NexusRustApi/src/modules/job/: handlers.rs  routes.rs
NexusRustApi/src/modules/menu/: handlers.rs  routes.rs
NexusRustApi/src/modules/notice/: handlers.rs  routes.rs
NexusRustApi/src/modules/role/: handlers.rs  mod.rs  routes.rs
NexusRustApi/src/modules/upload/: handlers.rs  mod.rs  routes.rs
NexusRustApi/src/modules/user/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs
Nexus样式库/: README.md  nexus.css  nexuspx.css  nexusrem.css  nexusrpx.css
(+4 files in other folders)
